[gd_scene load_steps=25 format=4 uid="uid://dx6bl3lude2nf"]

[ext_resource type="PackedScene" uid="uid://cwpqloipw12mc" path="res://scenes/number_2.tscn" id="1_1vpeu"]
[ext_resource type="Script" uid="uid://bmqtq61brn4cw" path="res://scripts/container_scene.gd" id="1_m16sb"]
[ext_resource type="Texture2D" uid="uid://s2mvcqsi8bil" path="res://assets/spritesheets/BoxyBold - by Clint Bellanger/Repacked - double.png" id="3_oioyk"]
[ext_resource type="Script" uid="uid://bm16iipiogwxj" path="res://scripts/multi_digit_number.gd" id="4_p4r1t"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p4r1t"]
texture = ExtResource("3_oioyk")
texture_region_size = Vector2i(18, 16)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0

[sub_resource type="TileSet" id="TileSet_hgltv"]
sources/0 = SubResource("TileSetAtlasSource_p4r1t")

[sub_resource type="Animation" id="Animation_p4r1t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_oioyk"]
resource_name = "bob"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667, 1.96667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -31), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hgltv"]
_data = {
&"RESET": SubResource("Animation_p4r1t"),
&"bob": SubResource("Animation_oioyk")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oioyk"]
texture = ExtResource("3_oioyk")
texture_region_size = Vector2i(18, 16)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0

[sub_resource type="TileSet" id="TileSet_p4r1t"]
sources/0 = SubResource("TileSetAtlasSource_oioyk")

[sub_resource type="AtlasTexture" id="AtlasTexture_ksuq5"]
atlas = ExtResource("3_oioyk")
region = Rect2(144, 0, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfhw8"]
atlas = ExtResource("3_oioyk")
region = Rect2(0, 16, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7thi"]
atlas = ExtResource("3_oioyk")
region = Rect2(18, 16, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl2e3"]
atlas = ExtResource("3_oioyk")
region = Rect2(36, 16, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s540l"]
atlas = ExtResource("3_oioyk")
region = Rect2(72, 16, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk4s8"]
atlas = ExtResource("3_oioyk")
region = Rect2(90, 16, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uongu"]
atlas = ExtResource("3_oioyk")
region = Rect2(108, 16, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dbyo"]
atlas = ExtResource("3_oioyk")
region = Rect2(126, 16, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_52lye"]
atlas = ExtResource("3_oioyk")
region = Rect2(144, 16, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hagg4"]
atlas = ExtResource("3_oioyk")
region = Rect2(0, 32, 18, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hgltv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksuq5")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfhw8")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7thi")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl2e3")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s540l")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk4s8")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uongu")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dbyo")
}],
"loop": true,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_52lye")
}],
"loop": true,
"name": &"8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hagg4")
}],
"loop": true,
"name": &"9",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g0yut"]
texture = ExtResource("3_oioyk")
texture_region_size = Vector2i(18, 16)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0

[sub_resource type="TileSet" id="TileSet_6bgfv"]
sources/0 = SubResource("TileSetAtlasSource_g0yut")

[node name="ContainerScene" type="Node2D"]
script = ExtResource("1_m16sb")

[node name="Root" parent="." instance=ExtResource("1_1vpeu")]

[node name="TitleCard" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="TitleCard"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 302.0
offset_right = -1.0
offset_bottom = 342.0
grow_horizontal = 2

[node name="TileMapLayer" type="TileMapLayer" parent="TitleCard/Control"]
texture_filter = 1
scale = Vector2(6, 6)
tile_map_data = PackedByteArray("AAD+/wAAAAABAAQAAAD//wAAAAAEAAUAAAAAAAAAAAAEAAQAAAABAAAAAAAHAAQAAAACAAAAAAABAAAAAAA=")
tile_set = SubResource("TileSet_hgltv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleCard/Control/TileMapLayer"]
libraries = {
&"": SubResource("AnimationLibrary_hgltv")
}
autoplay = "bob"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Credits" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Credits"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -231.0
offset_top = -115.0
offset_right = 234.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="TileMapLayer2" type="TileMapLayer" parent="Credits/Control"]
texture_filter = 1
position = Vector2(200, 0)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD//wAAAAAEAAMAAAAAAAAAAAADAAMAAAABAAAAAAAAAAQAAAACAAAAAAADAAUAAAD+/wAAAAABAAUAAAADAAAAAAACAAUAAAD9/wAAAAACAAMAAAA=")
tile_set = SubResource("TileSet_hgltv")

[node name="Scores" type="CanvasLayer" parent="."]

[node name="Scores" type="Control" parent="Scores"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -231.0
offset_top = -218.0
offset_right = 234.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 0

[node name="TileMapLayer2" type="TileMapLayer" parent="Scores/Scores"]
texture_filter = 1
position = Vector2(234, 0)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD//wAAAAAGAAQAAAAAAAAAAAABAAUAAAABAAAAAAAEAAMAAAACAAAAAAACAAUAAAD+/wAAAAACAAMAAAD9/wAAAAACAAUAAAA=")
tile_set = SubResource("TileSet_hgltv")

[node name="Back Button" type="Control" parent="Scores"]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -231.0
offset_top = -115.0
offset_right = 234.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0

[node name="TileMapLayer2" type="TileMapLayer" parent="Scores/Back Button"]
texture_filter = 1
position = Vector2(234, 0)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD//wAAAAAAAAMAAAAAAAAAAAACAAMAAAABAAAAAAACAAQAAAD+/wAAAAABAAMAAAA=")
tile_set = SubResource("TileSet_hgltv")

[node name="Volume Toggle" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Volume Toggle"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -393.0
offset_top = 14.0
offset_right = -10.0
offset_bottom = 118.0
grow_horizontal = 0

[node name="MUTE" type="TileMapLayer" parent="Volume Toggle/Control"]
texture_filter = 1
position = Vector2(63, -4)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAABAAAAAAAEAAQAAAACAAAAAAAEAAUAAAADAAAAAAADAAUAAAAEAAAAAAAEAAMAAAA=")
tile_set = SubResource("TileSet_p4r1t")

[node name="UNMUTE" type="TileMapLayer" parent="Volume Toggle/Control"]
visible = false
texture_filter = 1
position = Vector2(-1, -4)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAABAAAAAAAFAAQAAAACAAAAAAAEAAQAAAADAAAAAAAEAAUAAAAEAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAFAAAAAAAEAAMAAAA=")
tile_set = SubResource("TileSet_p4r1t")

[node name="High Scores" type="CanvasLayer" parent="."]
visible = false

[node name="Score1" type="Control" parent="High Scores"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -34.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_p4r1t")

[node name="Digit" type="AnimatedSprite2D" parent="High Scores/Score1"]
texture_filter = 1
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_hgltv")
animation = &"0"

[node name="Score2" type="Control" parent="High Scores"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = 79.0
offset_right = 2.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_p4r1t")

[node name="Digit" type="AnimatedSprite2D" parent="High Scores/Score2"]
texture_filter = 1
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_hgltv")
animation = &"0"

[node name="Score3" type="Control" parent="High Scores"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = 195.0
offset_right = 2.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_p4r1t")

[node name="Digit" type="AnimatedSprite2D" parent="High Scores/Score3"]
texture_filter = 1
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_hgltv")
animation = &"0"

[node name="Label" type="Control" parent="High Scores"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 14.0
offset_right = 20.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2

[node name="High" type="TileMapLayer" parent="High Scores/Label"]
texture_filter = 1
position = Vector2(29, -132)
scale = Vector2(6, 6)
tile_map_data = PackedByteArray("AAD+//7/AAAIAAMAAAD///7/AAAAAAQAAAAAAP7/AAAGAAMAAAABAP7/AAAIAAMAAAA=")
tile_set = SubResource("TileSet_6bgfv")

[node name="Label Scores" type="TileMapLayer" parent="High Scores/Label"]
texture_filter = 1
position = Vector2(29, -22)
scale = Vector2(6, 6)
tile_map_data = PackedByteArray("AAD+//7/AAACAAMAAAD///7/AAAGAAQAAAAAAP7/AAABAAUAAAABAP7/AAAEAAMAAAD9//7/AAACAAUAAAACAP7/AAACAAUAAAA=")
tile_set = SubResource("TileSet_6bgfv")

[connection signal="high_score" from="." to="Root" method="_on_high_score"]
[connection signal="final_score" from="Root" to="." method="_on_final_score"]
[connection signal="reload_scene" from="Root" to="." method="_on_reload_scene"]
[connection signal="gui_input" from="CanvasLayer/Control" to="." method="_on_touch_input"]
[connection signal="gui_input" from="Credits/Control" to="." method="_on_credits_gui_input"]
[connection signal="gui_input" from="Scores/Scores" to="." method="_on_scores_gui_input"]
[connection signal="gui_input" from="Scores/Back Button" to="." method="_on_back_scores_gui_input"]
[connection signal="gui_input" from="Volume Toggle/Control" to="." method="_on_mute_gui_input"]
